# install

./: .gitignore  readme.md
debian/: readme.md
windows/: readme.md  software.md
windows/keymap/: Unicode.klc
windows/keymap/Unicode/: Unicode_amd64.msi  Unicode_i386.msi  Unicode_ia64.msi
windows/watcher/: CMakeLists.txt  install.bat  makefile
windows/watcher/res/: resource.h  resource.manifest  resource.rc
windows/watcher/src/: main.cc  process.cc  process.h  window.cc  window.h
